Fixed an alignment issue.

--- a/src/ui-style/ui.css
+++ b/src/ui-style/ui.css
@@ -1181,7 +1181,7 @@ cst-drop-down
 {
   display: block;
   width: 7px;
-  height: 17px;
+  height: 19px;
   background: transparent url("../ui-images/dropdown.png") 50% 50% no-repeat;
   float: right;
   position: relative;
